--- a/templates/center.html
+++ b/templates/center.html
@@ -51,19 +51,19 @@
                 <div class="center left">
 
                     <div class="home2">
-                        11111
+                        <!-- 最新消息 -->
                     </div>
                     <div class="home2 hide">
-                        2
+                        <!-- 我的分享 -->
                     </div>
                     <div class="home2 hide">
-                        3
+                        <!-- 成就称号 -->
                     </div>
                     <div class="home2 hide">
-
+                        <!-- 个人资料 -->
                     </div>
                     <div class="home2 hide">
-                        5
+                        <!-- 我的订单 -->
                     </div>
                     <div class="home2 hide">
                         <table class="table table-hover table-bordered">
@@ -83,7 +83,7 @@
                     </div>
 
                     <div class="home2 hide">
-                        6
+                        <!-- 我的邀请 -->
                     </div>
 
                     <div class="home2 hide per_info">
@@ -149,8 +149,8 @@
                         </form>
                     </div>
 
-
                 </div>
+
 
                 <div class="right_menu left" style="display: none">
                     <div class="server1">
@@ -169,7 +169,7 @@
 
                     </div>
                 </div>
-                <div style="clear:both"></div>
+                <div style="clear: both"></div>
             </div>
         </div>
     {% endif %}
@@ -222,19 +222,19 @@
                 <div class="center left">
 
                     <div class="home2">
-                        11111
+                        <!-- 最新消息 -->
                     </div>
                     <div class="home2 hide">
-                        2
+                        <!-- 我的分享 -->
                     </div>
                     <div class="home2 hide">
-                        3
+                        <!-- 成就称号 -->
                     </div>
                     <div class="home2 hide">
-
+                        <!-- 个人资料 -->
                     </div>
                     <div class="home2 hide">
-                        5
+                        <!-- 我的订单 -->
                     </div>
                     <!-- 6 -->
                     <div class="home2 hide">
@@ -257,7 +257,7 @@
                     </div>
 
                     <div class="home2 hide">
-                        6
+                        <!-- 我的邀请 -->
                     </div>
 
                     <!--个人信息-->
