--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'index_base.html' %}
 
-
+{% block title %}
+    少儿编程首页
+{% endblock %}
 
 {% block article %}
     <div class="info">{% csrf_token %}</div>
