--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>少儿编程首页</title>
+    <title>
+        {% block title %}
+
+        {% endblock %}
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="在线一对一少儿编程"/>
     <style type="text/css">
