--- a/templates/stu_show.html
+++ b/templates/stu_show.html
@@ -1,5 +1,9 @@
 {% extends "index_base.html" %}
 
+{% block title %}
+    学员风采
+{% endblock %}
+
 {% block article %}
     <div id="fh5co-project">
         <div class="container">
